--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^6.15.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.2.1",
     "reactstrap": "8.9.0"
   },
   "devDependencies": {
