--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
+    "connected-react-router": "^6.9.1",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
@@ -61,7 +63,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.2.1",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
