--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API=lalalala
+REACT_APP_API=http://605b51d327f0050017c06db2.mockapi.io/api/
+REACT_APP_API_LARAVEL=http://www.cclam.org.pe/laravel_api/api/
