--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-reactstrap-pagination": "^2.0.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.2.1",
