--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE=http://192.168.43.185:8000/
-REACT_APP_API=http://192.168.43.185:8000/api/
+REACT_APP_BASE=https://www.cclam.org.pe/laravel_api/
+REACT_APP_API=https://www.cclam.org.pe/laravel_api/api/
 REACT_APP_API_2=http://www.cclam.org.pe/laravel_api/api/
