--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "argon-dashboard-react",
+  "name": "idl",
   "version": "1.2.0",
-  "description": "React version of Argon Dashboard by Creative Tim",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/argon-dashboard-react.git"
-  },
+  "description": "Sistema IDL",
   "keywords": [
     "react",
     "reactjs",
@@ -17,12 +12,12 @@
     "argon-dashboard",
     "argon-dashboard-react"
   ],
-  "author": "Creative Tim",
+  "author": "Daniela",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/creativetimofficial/argon-dashboard-react/issues"
   },
-  "homepage": "https://demos.creative-tim.com/argon-dashboard-react/",
+  "homepage": "https://www.cclam.org.pe/idl/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
