--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BLK Design System React",
-  "name": "BLK Design System React by Creative Tim",
+  "short_name": "GLOBALSOFT",
+  "name": "GLOBALSOFT CCLAM.ORG.PE",
   "icons": [
     {
       "src": "favicon.ico",
