--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "connected-react-router": "^6.9.1",
+    "firebase": "^8.4.2",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
