--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "argon-dashboard",
     "argon-dashboard-react"
   ],
-  "author": "Daniela",
+  "author": "Daniela Paiva",
   "license": "MIT",
   "homepage": "https://www.cclam.org.pe/gs/",
   "scripts": {
